--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <header>
-      <a href="">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <nav>
         <ul>
-          <li><a href=""></a>Студия</li>
-          <li><a href=""></a>Портфолио</li>
-          <li><a href=""></a>Контакты</li>
+          <li><a href="./index.html">Студия</a></li>
+          <li><a href="./portfolio.html">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
         </ul>
       </nav>
       <ul>
@@ -93,7 +93,7 @@
         <ul>
           <li>
             <img
-              src="./images/img-worker-1.jpg"
+              src="./images/staff/img-worker-1.jpg"
               alt="фото"
               width="270"
               height="260"
@@ -103,7 +103,7 @@
           </li>
           <li>
             <img
-              src="./images/img-worker-2.jpg"
+              src="./images/staff/img-worker-2.jpg"
               alt="фото"
               width="270"
               height="260"
@@ -113,7 +113,7 @@
           </li>
           <li>
             <img
-              src="./images/img-worker-3.jpg"
+              src="./images/staff/img-worker-3.jpg"
               alt="фото"
               width="270"
               height="260"
@@ -123,7 +123,7 @@
           </li>
           <li>
             <img
-              src="./images/img-worker-4.jpg"
+              src="./images/staff/img-worker-4.jpg"
               alt="фото"
               width="270"
               height="260"
@@ -135,12 +135,12 @@
       </section>
     </main>
     <footer>
-      <a href="">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <address>
         <ul>
           <li>
             <a
-              href="https://www.google.com.ua/maps/place/бул.+Леси+Украинки,+26,+Киев,+02000"
+              href="https://goo.gl/maps/VNFser5c9RtYqJdY7"
               target="_blank"
               rel="noreferrer noopener"
               >г. Киев, пр-т Леси Украинки, 26</a
