--- a/portfolio.html
+++ b/portfolio.html
@@ -22,110 +22,126 @@
       </ul>
     </header>
     <main>
-      <section>
-        <h2>Наши работы</h2>
-        <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
-        </ul>
-      </section>
-      <section>
-        <ul>
-          <li>
-            <img
+      <h1>Портфолио</h1>
+      <ul>
+        <li><button type="button">Все</button></li>
+        <li><button type="button">Веб-сайты</button></li>
+        <li><button type="button">Приложения</button></li>
+        <li><button type="button">Дизайн</button></li>
+        <li><button type="button">Маркетинг</button></li>
+      </ul>
+
+      <!-- дописать альты -->
+      <ul>
+        <li>
+          <a href=""
+            ><img
               src="./images/portfolio/web-1.jpg"
-              alt=""
+              alt="Страница сайта на мониторе ноутбука"
               width="370"
               height="294"
             />
-            <h3>Технокряк</h3>
-            <p>Веб-сайт</p>
-          </li>
-          <li>
-            <img
+            <h2>Технокряк</h2>
+            <p>Веб-сайт</p></a
+          >
+        </li>
+        <li>
+          <a href=""
+            ><img
               src="./images/portfolio/design-1.jpg"
-              alt=""
+              alt="Баскетбольный постер"
               width="370"
               height="294"
             />
-            <h3>Постер New Orlean vs Golden Star</h3>
-            <p>Дизайн</p>
-          </li>
-          <li>
-            <img
+            <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+            <p>Дизайн</p></a
+          >
+        </li>
+        <li>
+          <a href=""
+            ><img
               src="./images/portfolio/app-1.jpg"
-              alt=""
+              alt="Логотип и название ресторана"
               width="370"
               height="294"
             />
-            <h3>Ресторан Seafood</h3>
-            <p>Приложение</p>
-          </li>
-          <li>
-            <img
+            <h2>Ресторан <span lang="en">Seafood</span></h2>
+            <p>Приложение</p></a
+          >
+        </li>
+        <li>
+          <a href=""
+            ><img
               src="./images/portfolio/marketing-1.jpg"
-              alt=""
+              alt="Полноразмерные наушники"
               width="370"
               height="294"
             />
-            <h3>Проект Prime</h3>
-            <p>Маркетинг</p>
-          </li>
-          <li>
-            <img
+            <h2>Проект <span lang="en">Prime</span></h2>
+            <p>Маркетинг</p></a
+          >
+        </li>
+        <li>
+          <a href=""
+            ><img
               src="./images/portfolio/app-2.jpg"
-              alt=""
+              alt="Две коробки с логотипами проекта"
               width="370"
               height="294"
             />
-            <h3>Проект Boxes</h3>
-            <p>Приложение</p>
-          </li>
-          <li>
-            <img
+            <h2>Проект <span lang="en">Boxes</span></h2>
+            <p>Приложение</p></a
+          >
+        </li>
+        <li>
+          <a href=""
+            ><img
               src="./images/portfolio/web-2.jpg"
-              alt=""
+              alt="Страница сайта на мониторе компьютера"
               width="370"
               height="294"
             />
-            <h3>Inspiration has no Borders</h3>
-            <p>Веб-сайт</p>
-          </li>
-          <li>
-            <img
+            <h2><span lang="en">Inspiration has no Borders</span></h2>
+            <p>Веб-сайт</p></a
+          >
+        </li>
+        <li>
+          <a href=""
+            ><img
               src="./images/portfolio/design-2.jpg"
-              alt=""
+              alt="Раскрытая книга"
               width="370"
               height="294"
             />
-            <h3>Издание Limited Edition</h3>
-            <p>Дизайн</p>
-          </li>
-          <li>
-            <img
+            <h2>Издание <span lang="en">Limited Edition</span></h2>
+            <p>Дизайн</p></a
+          >
+        </li>
+        <li>
+          <a href=""
+            ><img
               src="./images/portfolio/marketing-2.jpg"
-              alt=""
+              alt="Бирка с названием проекта"
               width="370"
               height="294"
             />
-            <h3>Проект LAB</h3>
-            <p>Маркетинг</p>
-          </li>
-          <li>
-            <img
+            <h2>Проект <span lang="en">LAB</span></h2>
+            <p>Маркетинг</p></a
+          >
+        </li>
+        <li>
+          <a href=""
+            ><img
               src="./images/portfolio/app-3.jpg"
-              alt=""
+              alt="Страница приложения на мониторе ноутбука"
               width="370"
               height="294"
             />
-            <h3>Growing Business</h3>
-            <p>Приложение</p>
-          </li>
-        </ul>
-      </section>
+            <h2><span lang="en">Growing Business</span></h2>
+            <p>Приложение</p></a
+          >
+        </li>
+      </ul>
     </main>
     <footer>
       <a href="./index.html">WebStudio</a>
