--- a/index.html
+++ b/index.html
@@ -4,83 +4,106 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/css/styles.css" />
     <title>Студия</title>
   </head>
   <body>
-    <header>
-      <a href="./index.html">WebStudio</a>
-      <nav>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+    <header class="header">
+      <a href="./index.html" class="header-logo link"
+        >Web<span class="header-color">Studio</span></a
+      >
+      <nav class="header-navigation">
+        <ul class="header-list">
+          <li>
+            <a href="./index.html" class="header-link link current">Студия</a>
+          </li>
+          <li>
+            <a href="./portfolio.html" class="header-link link">Портфолио</a>
+          </li>
+          <li>
+            <a href="" class="header-link link">Контакты</a>
+          </li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="header-list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="header-mail link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+380961111111" class="header-tel link"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="button link">Заказать услугу</button>
       </section>
-      <section>
-        <h2>Наши преимущества</h2>
-        <ul>
+      <section class="feature">
+        <h2 class="feature-hidden-title">Наши преимущества</h2>
+        <ul class="feature-list list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="feature-title">Внимание к деталям</h3>
+            <p class="feature-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="feature-title">Пунктуальность</h3>
+            <p class="feature-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="feature-title">Планирование</h3>
+            <p class="feature-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="feature-title">Современные технологии</h3>
+            <p class="feature-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-          <li>
+      <section class="about">
+        <h2 class="about-title">Чем мы занимаемся</h2>
+        <ul class="about-list list">
+          <li class="about-item">
             <img
-              src="./images/img-1.jpg"
+              src="./images/development/img-1.jpg"
               alt="Вёрстка"
               width="370"
               height="294"
             />
           </li>
-          <li>
+          <li class="about-item">
             <img
-              src="./images/img-2.jpg"
+              src="./images/development/img-2.jpg"
               alt="Дизайн"
               width="370"
               height="294"
             />
           </li>
-          <li>
+          <li class="about-item">
             <img
-              src="./images/img-3.jpg"
+              src="./images/development/img-3.jpg"
               alt="Оформление"
               width="370"
               height="294"
@@ -88,12 +111,12 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="team-list list">
+          <li class="team-item">
             <img
-              src="./images/staff/img-worker-1.jpg"
+              src="./images/team/img-worker-1.jpg"
               alt="фото"
               width="270"
               height="260"
@@ -101,9 +124,9 @@
             <h3>Игорь Демьяненко</h3>
             <p lang="en">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
-              src="./images/staff/img-worker-2.jpg"
+              src="./images/team/img-worker-2.jpg"
               alt="фото"
               width="270"
               height="260"
@@ -111,9 +134,9 @@
             <h3>Ольга Репина</h3>
             <p lang="en">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
-              src="./images/staff/img-worker-3.jpg"
+              src="./images/team/img-worker-3.jpg"
               alt="фото"
               width="270"
               height="260"
@@ -121,9 +144,9 @@
             <h3>Николай Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
-              src="./images/staff/img-worker-4.jpg"
+              src="./images/team/img-worker-4.jpg"
               alt="фото"
               width="270"
               height="260"
@@ -134,20 +157,31 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo link"
+        >Web<span class="header-color">Studio</span></a
+      >
       <address>
-        <ul>
+        <ul class="footer-list list">
           <li>
             <a
               href="https://goo.gl/maps/VNFser5c9RtYqJdY7"
+              class="footer-address link"
               target="_blank"
               rel="noreferrer noopener"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <li>
+            <a href="mailto:info@example.com" class="footer-mail link"
+              >info@example.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380991111111" class="footer-tel link"
+              >+38 099 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
