--- a/portfolio.html
+++ b/portfolio.html
@@ -4,159 +4,204 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/css/styles.css" />
     <title>Портфолио</title>
   </head>
   <body>
-    <header>
-      <a href="./index.html">WebStudio</a>
-      <nav>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+    <header class="header">
+      <a href="./index.html" class="header-logo link"
+        >Web<span class="header-color">Studio</span></a
+      >
+      <nav class="header-navigation">
+        <ul class="header-list">
+          <li>
+            <a href="./index.html" class="header-link link">Студия</a>
+          </li>
+          <li>
+            <a href="./portfolio.html" class="header-link link current"
+              >Портфолио</a
+            >
+          </li>
+          <li>
+            <a href="" class="header-link link">Контакты</a>
+          </li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="header-list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="header-mail link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+380961111111" class="header-tel link"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
     <main>
-      <h1>Портфолио</h1>
-      <ul>
-        <li><button type="button">Все</button></li>
-        <li><button type="button">Веб-сайты</button></li>
-        <li><button type="button">Приложения</button></li>
-        <li><button type="button">Дизайн</button></li>
-        <li><button type="button">Маркетинг</button></li>
+      <h1 class="main-title">Портфолио</h1>
+      <ul class="btn-list list">
+        <li><button type="button" class="btn current">Все</button></li>
+        <li><button type="button" class="btn">Веб-сайты</button></li>
+        <li><button type="button" class="btn">Приложения</button></li>
+        <li><button type="button" class="btn">Дизайн</button></li>
+        <li><button type="button" class="btn">Маркетинг</button></li>
       </ul>
 
-      <!-- дописать альты -->
-      <ul>
+      <ul class="portfolio-list list">
         <li>
-          <a href=""
+          <a href="" class="portfolio-link link"
             ><img
               src="./images/portfolio/web-1.jpg"
               alt="Страница сайта на мониторе ноутбука"
               width="370"
               height="294"
             />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p></a
+            <h2 class="pirtfolio-title">Технокряк</h2>
+            <p class="portfolio-text">Веб-сайт</p></a
           >
         </li>
         <li>
-          <a href=""
+          <a href="" class="portfolio-link link"
             ><img
               src="./images/portfolio/design-1.jpg"
               alt="Баскетбольный постер"
               width="370"
               height="294"
             />
-            <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-            <p>Дизайн</p></a
+            <h2 class="pirtfolio-title">
+              Постер <span lang="en">New Orlean vs Golden Star</span>
+            </h2>
+            <p class="portfolio-text">Дизайн</p></a
           >
         </li>
         <li>
-          <a href=""
+          <a href="" class="portfolio-link link"
             ><img
               src="./images/portfolio/app-1.jpg"
               alt="Логотип и название ресторана"
               width="370"
               height="294"
             />
-            <h2>Ресторан <span lang="en">Seafood</span></h2>
-            <p>Приложение</p></a
+            <h2 class="pirtfolio-title">
+              Ресторан <span lang="en">Seafood</span>
+            </h2>
+            <p class="portfolio-text">Приложение</p></a
           >
         </li>
         <li>
-          <a href=""
+          <a href="" class="portfolio-link link"
             ><img
               src="./images/portfolio/marketing-1.jpg"
               alt="Полноразмерные наушники"
               width="370"
               height="294"
             />
-            <h2>Проект <span lang="en">Prime</span></h2>
-            <p>Маркетинг</p></a
+            <h2 class="pirtfolio-title">Проект <span lang="en">Prime</span></h2>
+            <p class="portfolio-text">Маркетинг</p></a
           >
         </li>
         <li>
-          <a href=""
+          <a href="" class="portfolio-link link"
             ><img
               src="./images/portfolio/app-2.jpg"
               alt="Две коробки с логотипами проекта"
               width="370"
               height="294"
             />
-            <h2>Проект <span lang="en">Boxes</span></h2>
-            <p>Приложение</p></a
+            <h2 class="pirtfolio-title">Проект <span lang="en">Boxes</span></h2>
+            <p class="portfolio-text">Приложение</p></a
           >
         </li>
         <li>
-          <a href=""
+          <a href="" class="portfolio-link link"
             ><img
               src="./images/portfolio/web-2.jpg"
               alt="Страница сайта на мониторе компьютера"
               width="370"
               height="294"
             />
-            <h2><span lang="en">Inspiration has no Borders</span></h2>
-            <p>Веб-сайт</p></a
+            <h2 class="pirtfolio-title">
+              <span lang="en">Inspiration has no Borders</span>
+            </h2>
+            <p class="portfolio-text">Веб-сайт</p></a
           >
         </li>
         <li>
-          <a href=""
+          <a href="" class="portfolio-link link"
             ><img
               src="./images/portfolio/design-2.jpg"
               alt="Раскрытая книга"
               width="370"
               height="294"
             />
-            <h2>Издание <span lang="en">Limited Edition</span></h2>
-            <p>Дизайн</p></a
+            <h2 class="pirtfolio-title">
+              Издание <span lang="en">Limited Edition</span>
+            </h2>
+            <p class="portfolio-text">Дизайн</p></a
           >
         </li>
         <li>
-          <a href=""
+          <a href="" class="portfolio-link link"
             ><img
               src="./images/portfolio/marketing-2.jpg"
               alt="Бирка с названием проекта"
               width="370"
               height="294"
             />
-            <h2>Проект <span lang="en">LAB</span></h2>
-            <p>Маркетинг</p></a
+            <h2 class="pirtfolio-title">Проект <span lang="en">LAB</span></h2>
+            <p class="portfolio-text">Маркетинг</p></a
           >
         </li>
         <li>
-          <a href=""
+          <a href="" class="portfolio-link link"
             ><img
               src="./images/portfolio/app-3.jpg"
               alt="Страница приложения на мониторе ноутбука"
               width="370"
               height="294"
             />
-            <h2><span lang="en">Growing Business</span></h2>
-            <p>Приложение</p></a
+            <h2 class="pirtfolio-title">
+              <span lang="en">Growing Business</span>
+            </h2>
+            <p class="portfolio-text">Приложение</p></a
           >
         </li>
       </ul>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo link"
+        >Web<span class="header-color">Studio</span></a
+      >
       <address>
-        <ul>
+        <ul class="footer-list list">
           <li>
             <a
               href="https://goo.gl/maps/VNFser5c9RtYqJdY7"
+              class="footer-address link"
               target="_blank"
               rel="noreferrer noopener"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <li>
+            <a href="mailto:info@example.com" class="footer-mail link"
+              >info@example.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380991111111" class="footer-tel link"
+              >+38 099 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
