--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Студия</title>
   </head>
   <body>
     <header class="header">
-      <a href="./index.html" class="header-logo link"
-        >Web<span class="header-color">Studio</span></a
+      <a href="./index.html" class="logo link"
+        >Web<span class="header-logo">Studio</span></a
       >
       <nav class="header-navigation">
-        <ul class="header-list">
+        <ul class="header-list list">
           <li>
             <a href="./index.html" class="header-link link current">Студия</a>
           </li>
@@ -31,13 +31,13 @@
           </li>
         </ul>
       </nav>
-      <ul class="header-list">
-        <li>
+      <ul class="header-list list">
+        <li class="header-list-item">
           <a href="mailto:info@devstudio.com" class="header-mail link"
             >info@devstudio.com</a
           >
         </li>
-        <li>
+        <li class="header-list-item">
           <a href="tel:+380961111111" class="header-tel link"
             >+38 096 111 11 11</a
           >
@@ -47,35 +47,35 @@
     <main>
       <section class="hero">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="button link">Заказать услугу</button>
+        <button type="button" class="button">Заказать услугу</button>
       </section>
-      <section class="feature">
-        <h2 class="feature-hidden-title">Наши преимущества</h2>
-        <ul class="feature-list list">
+      <section class="features">
+        <h2 class="features-hidden-title">Наши преимущества</h2>
+        <ul class="features-list list">
           <li>
-            <h3 class="feature-title">Внимание к деталям</h3>
-            <p class="feature-text">
+            <h3 class="features-title">Внимание к деталям</h3>
+            <p class="features-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3 class="feature-title">Пунктуальность</h3>
-            <p class="feature-text">
+            <h3 class="features-title">Пунктуальность</h3>
+            <p class="features-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3 class="feature-title">Планирование</h3>
-            <p class="feature-text">
+            <h3 class="features-title">Планирование</h3>
+            <p class="features-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3 class="feature-title">Современные технологии</h3>
-            <p class="feature-text">
+            <h3 class="features-title">Современные технологии</h3>
+            <p class="features-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -121,8 +121,8 @@
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="team-item-title">Игорь Демьяненко</h3>
+            <p class="team-item-text" lang="en">Product Designer</p>
           </li>
           <li class="team-item">
             <img
@@ -131,8 +131,8 @@
               width="270"
               height="260"
             />
-            <h3>Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="team-item-title">Ольга Репина</h3>
+            <p class="team-item-text" lang="en">Frontend Developer</p>
           </li>
           <li class="team-item">
             <img
@@ -141,8 +141,8 @@
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="team-item-title">Николай Тарасов</h3>
+            <p class="team-item-text" lang="en">Marketing</p>
           </li>
           <li class="team-item">
             <img
@@ -151,17 +151,17 @@
               width="270"
               height="260"
             />
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="team-item-title">Михаил Ермаков</h3>
+            <p class="team-item-text" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="footer-logo link"
-        >Web<span class="header-color">Studio</span></a
+      <a href="./index.html" class="logo link"
+        >Web<span class="footer-logo">Studio</span></a
       >
-      <address>
+      <address class="adress">
         <ul class="footer-list list">
           <li>
             <a
