fix after finish

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
     </header>
     <main>
       <section>
-        <h1 class="portfolio-hidden-title">Портфолио</h1>
+        <h1 class="visually-hidden">Портфолио</h1>
         <ul class="btn-list list">
           <li><button type="button" class="btn current">Все</button></li>
           <li><button type="button" class="btn">Веб-сайты</button></li>
