--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <button type="button" class="button">Заказать услугу</button>
       </section>
       <section class="features">
-        <h2 class="features-hidden-title">Наши преимущества</h2>
+        <h2 class="visually-hidden">Наши преимущества</h2>
         <ul class="features-list list">
           <li>
             <h3 class="features-title">Внимание к деталям</h3>
